@@ -56,6 +56,7 @@
     <properties>
         <bundle.symbolicName>${project.groupId}.${project.artifactId}</bundle.symbolicName>
         <bundle.namespace>${project.groupId}.${project.artifactId}</bundle.namespace>
+        <datastax.driver.extra_config_options>jamm.use_static_fields=true</datastax.driver.extra_config_options>
 
         <!-- Dependency versions -->
         <io.netty.version>4.1.94.Final</io.netty.version>
@@ -71,7 +72,7 @@
         <org.hdrhistogram.version>2.1.12</org.hdrhistogram.version>
         <slf4j.version>1.7.30</slf4j.version>
         <logback.version>1.2.13</logback.version>
-        <cassandra.version>4.0.10</cassandra.version>
+        <cassandra.version>5.0-alpha1</cassandra.version>
         <osgi.version>1.3.0</osgi.version>
         <mockito.core.version>3.3.3</mockito.core.version>
         <assertj.version>3.16.1</assertj.version>
@@ -90,7 +91,7 @@
         <awaitility.version>3.0.0</awaitility.version>
         <jcip.version>1.0</jcip.version>
         <junitparams.version>1.1.1</junitparams.version>
-        <equalsverifier.version>3.5</equalsverifier.version>
+        <equalsverifier.version>3.15</equalsverifier.version>
         <org.springframework.boot.version>2.7.17</org.springframework.boot.version>
         <org.springdoc.openapi-ui.version>1.7.0</org.springdoc.openapi-ui.version>
         <io.prometheus.simpleclient>0.16.0</io.prometheus.simpleclient>
@@ -98,9 +99,9 @@
         <swagger-annotations.version>2.2.11</swagger-annotations.version>
 
         <!-- Plugin versions -->
-        <org.apache.maven.plugins.maven-compiler-plugin.version>3.8.0</org.apache.maven.plugins.maven-compiler-plugin.version>
+        <org.apache.maven.plugins.maven-compiler-plugin.version>3.11.0</org.apache.maven.plugins.maven-compiler-plugin.version>
         <org.apache.maven.plugins.maven-install-plugin.version>2.5.2</org.apache.maven.plugins.maven-install-plugin.version>
-        <org.apache.maven.plugins.maven-surefire-plugin.version>2.22.1</org.apache.maven.plugins.maven-surefire-plugin.version>
+        <org.apache.maven.plugins.maven-surefire-plugin.version>3.0.0-M5</org.apache.maven.plugins.maven-surefire-plugin.version>
         <org.apache.maven.plugins.maven-failsafe-plugin.version>2.22.1</org.apache.maven.plugins.maven-failsafe-plugin.version>
         <org.apache.maven.plugins.maven-assembly-plugin.version>3.6.0</org.apache.maven.plugins.maven-assembly-plugin.version>
         <org.apache.maven.plugins-maven-checkstyle-plugin.version>3.2.0</org.apache.maven.plugins-maven-checkstyle-plugin.version>
@@ -108,14 +109,14 @@
         <org.apache.maven.plugin.maven-jxr-plugin.version>3.0.0</org.apache.maven.plugin.maven-jxr-plugin.version>
         <org.apache.maven.plugins-maven-resources-plugin.version>3.1.0</org.apache.maven.plugins-maven-resources-plugin.version>
         <org.apache.maven.plugins-maven-dependency-plugin.version>3.5.0</org.apache.maven.plugins-maven-dependency-plugin.version>
-        <org.apache.maven.plugins-maven-jar-plugin.version>2.6</org.apache.maven.plugins-maven-jar-plugin.version>
+        <org.apache.maven.plugins-maven-jar-plugin.version>3.3.0</org.apache.maven.plugins-maven-jar-plugin.version>
         <org.apache.maven.plugins-maven-shade-plugin.version>3.4.1</org.apache.maven.plugins-maven-shade-plugin.version>
         <org.apache.felix.maven-bundle-plugin.version>5.1.8</org.apache.felix.maven-bundle-plugin.version>
         <com.mycila.license-maven-plugin.version>3.0</com.mycila.license-maven-plugin.version>
-        <io.fabric8.docker-maven-plugin.version>0.35.0</io.fabric8.docker-maven-plugin.version>
+        <io.fabric8.docker-maven-plugin.version>0.43.0</io.fabric8.docker-maven-plugin.version>
         <org.apache.servicemix.tooling.depends-maven-plugin.version>1.2</org.apache.servicemix.tooling.depends-maven-plugin.version>
-        <org.apache.karaf.tooling.karaf-maven-plugin.version>4.2.1</org.apache.karaf.tooling.karaf-maven-plugin.version>
-        <org.jacoco.jacoco-maven-plugin.version>0.8.4</org.jacoco.jacoco-maven-plugin.version>
+        <org.apache.karaf.tooling.karaf-maven-plugin.version>4.4.0</org.apache.karaf.tooling.karaf-maven-plugin.version>
+        <org.jacoco.jacoco-maven-plugin.version>0.8.9</org.jacoco.jacoco-maven-plugin.version>
         <org.codehaus.mojo.exec-maven-plugin.version>3.0.0</org.codehaus.mojo.exec-maven-plugin.version>
         <org.codehaus.mojo.license-maven-plugin.version>1.19</org.codehaus.mojo.license-maven-plugin.version>
 
@@ -588,6 +589,12 @@
                             --add-opens java.base/jdk.internal.module=ALL-UNNAMED
                             --add-opens java.base/jdk.internal.util.jar=ALL-UNNAMED
                             --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
+                            --add-opens=java.base/java.io=ALL-UNNAMED
+                            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                            --add-opens=java.base/java.util=ALL-UNNAMED
+                            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                            --add-opens=java.base/java.lang=ALL-UNNAMED
                         </argLine>
                     </configuration>
                 </plugin>
@@ -601,8 +608,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${org.apache.maven.plugins.maven-compiler-plugin.version}</version>
                     <configuration>
-                        <source>11</source>
-                        <target>11</target>
+                        <source>17</source>
+                        <target>17</target>
                     </configuration>
                 </plugin>
 
@@ -616,6 +623,7 @@
                     <version>${org.apache.maven.plugins.maven-assembly-plugin.version}</version>
                     <configuration>
                         <skipAssembly>true</skipAssembly>
+                        <tarLongFileMode>posix</tarLongFileMode>
                     </configuration>
                 </plugin>
 
